--- a/package.json
+++ b/package.json
@@ -16,5 +16,23 @@
   "bugs": {
     "url": "https://github.com/lmhale/news-fix/issues"
   },
-  "homepage": "https://github.com/lmhale/news-fix#readme"
+  "homepage": "https://github.com/lmhale/news-fix#readme",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.5.0",
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  }
 }
