feat(set-up): home page renders

--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,13 @@
 {
-  "presets": [
-    "@babel/presets-env",
-    [
-      "@babel/preset-react",
-      {
-        "runtime": "automatic"
-      }
+    "presets": [
+      "@babel/preset-env",
+      [
+        "@babel/preset-react",
+        {
+          "runtime": "automatic"
+        }
+      ],
+      "@babel/preset-typescript"
     ],
-    "@babel/preset-typescript"
-  ]
-}
+
+  }
