--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
