--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/lmhale/news-fix#readme",
   "dependencies": {
     "axios": "^0.26.1",
-    "dotenv": "^16.0.0",
+    "dotenv-webpack": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -36,6 +36,7 @@
     "@types/react-dom": "^17.0.13",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.0",
     "eslint": "^8.10.0",
     "html-webpack-plugin": "^5.5.0",
     "react-refresh": "^0.11.0",
