--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/lmhale/news-fix#readme",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
     "axios": "^0.26.1",
     "dotenv-webpack": "^7.1.0",
     "express": "^4.17.3",
