--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,15 +11,15 @@
     "noEmit": true /* Do not emit outputs. */,
     "isolatedModules": false /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "strict": true /* Enable all strict type-checking options. */,
+    "strict": false /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "resolveJsonModule": true
     // "allowJs": true /* Allow javascript files to be compiled. Useful when migr ating JS to TS */,
     // "checkJs": true /* Report errors in .js files. Works in tandem with allowJs. */,
   },
-  "exclude": ["node_modules"],
-  "include": ["client/**/*"]
+  // "exclude": ["node_modules"],
+  "include": ["client/**/*", "server/**/*"]
 }
 
 /*
