--- a/.env
+++ b/.env
@@ -1,1 +1,18 @@
 API_KEY=22bbf90d967d4a6bb08645375335e232
+DB_PORT=5432
+DB_HOST=localhost
+DB_USERNAME=laurenmhale 
+DB_PASSWORD=undefined
+DB_NAME=newsfix   
+DB_TYPE=postgres
+      
+
+TYPEORM_CONNECTION = postgres
+TYPEORM_HOST = localhost
+TYPEORM_USERNAME = laurenmhale
+TYPEORM_PASSWORD = admin
+TYPEORM_DATABASE = newsfix
+TYPEORM_PORT = 5432
+TYPEORM_SYNCHRONIZE = true
+TYPEORM_LOGGING = false
+TYPEORM_ENTITIES = entity/*.js,modules/**/entity/*.js
