--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "axios": "^0.26.1",
+    "body-parser": "^1.19.2",
     "dotenv-webpack": "^7.1.0",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
