insert into many to many

--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
 
-TYPEORM_ENTITIES = entity/*.ts,modules/**/entity/*.ts
+TYPEORM_ENTITIES = "/server/entity/*.ts" 
