--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     
   },
   // "exclude": ["node_modules"],
-  "include": ["client/**/*", "server/**/*"]
+  "include": ["client/**/*", "server/**/*", "routes"]
 }
 
 
