--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/lmhale/news-fix#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "axios": "^0.26.1",
@@ -31,6 +32,7 @@
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "ts-node": "^10.7.0",
     "typeorm": "^0.2.45"
   },
