--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^17.0.21",
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "dotenv-webpack": "^7.1.0",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
@@ -43,6 +44,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@types/cors": "^2.8.12",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "babel-loader": "^8.2.3",
