--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.8.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
+    "@types/react-router": "^5.1.18",
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
@@ -34,6 +35,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "ts-node": "^10.7.0",
     "typeorm": "^0.2.45"
   },
