--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   "homepage": "https://github.com/lmhale/news-fix#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "@types/react-router": "^5.1.18",
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv-webpack": "^7.1.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "react": "^17.0.2",
@@ -48,6 +52,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "babel-loader": "^8.2.3",
