--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/lmhale/news-fix#readme",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1",
     "@reduxjs/toolkit": "^1.8.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
@@ -33,6 +36,7 @@
     "cors": "^2.8.5",
     "dotenv-webpack": "^7.1.0",
     "express": "^4.17.3",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
