--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
+    "react-window": "^1.8.6",
     "ts-node": "^10.7.0",
     "typeorm": "^0.2.45"
   },
@@ -59,6 +60,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/react-window": "^1.8.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
