--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv-webpack": "^7.1.0",
     "express": "^4.17.3",
