--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
+  },
+  "engines": {
+    "node": "16.13.0"
   }
 }
